# kakao-ourchat

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PRIVACY.md  README.en.md  README.md  SECURITY.md  brand.json  llms.txt  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: EXPORTING.md  FORMATS.md  HOSTING.md
ourchat/: __main__.py  analyze.py  char_dossier.py  characterize.py  cli.py  daily.py  llm.py  make_sample.py  merge.py  narrate.py  parse_export.py  reindex.py  summarize.py  topics.py
samples/: sample_export.csv
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css
web/src/lib/: ForceGraph.svelte  Spark.svelte  archetypes.js
