[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ourchat"
version = "0.1.0"
description = "Turn a KakaoTalk chat export into a knowledge-graph dashboard — relationships, personas, topics. Local-first, no decryption."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["kakaotalk", "카카오톡", "chat-analysis", "chat-analytics", "knowledge-graph",
            "social-network-analysis", "network-analysis", "nlp", "group-chat", "dashboard",
            "conversation-analysis", "privacy-first", "svelte", "data-visualization"]
authors = [{ name = "OurChat contributors" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Visualization",
  "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24", "scikit-learn>=1.3"]

[project.urls]
Homepage = "https://github.com/jutalik/kakao-ourchat"
Documentation = "https://github.com/jutalik/kakao-ourchat#readme"
Issues = "https://github.com/jutalik/kakao-ourchat/issues"

[project.scripts]
ourchat = "ourchat.cli:main"

[tool.setuptools]
packages = ["ourchat"]
